dodano autoryzacje przykladowy json w glownej klasie, usprawniono tworzenie, pobieranie grup, dodawanie uzytkownikow do grup zarzadzanie projektami